--- a/index.html
+++ b/index.html
@@ -119,15 +119,12 @@
         </a>
     </section>
 
-    <!-- Watermarks -->>
+    <!-- Watermarks -->
     <div class="watermark">Made with ❤️ From Ayush</div>
-    <div class="video-watermark">    <div class="video-watermark">
-        <a href="http://www.sinhgad.edu/" target="_blank">Background video © Sinhgad Institutes</a>
+    <div class="video-watermark">
+        <a href="http://www.sinhgad.edu/" target="_blank">Background video ©</a>
     </div>
 
-
-
-
-</html></body>    <script src="scripts.js"></script>    <script src="scripts.js"></script>
+    <script src="scripts.js"></script>
 </body>
 </html>
