gallary and credits

--- a/index.html
+++ b/index.html
@@ -21,9 +21,11 @@
     <nav class="nav">
         <a href="#home">Home</a>
         <a href="#about">About</a>
+        <a href="#campus">Campus</a> <!-- Added Campus Button -->
         <a href="#courses">Courses</a>
         <a href="#admission">Admission</a>
         <a href="#contact">Contact</a>
+        <a href="#credits">Credits</a> <!-- Added Credits Tab -->
     </nav>
 
     <!-- Sections -->
@@ -39,14 +41,46 @@
         <p>OUR MISSION is to do WHAT it takes to foster, sustain and upgrade the quality of Education by way of harnessing Talent, Potential and optimizing meaningful Learning Facilities. OUR ENDEAVOR is to provide the Best Learning, conductive environment and the students with effective Learning Strategies.</p>
     </section>
 
+    <!-- College Gallery Section -->
+    <section id="campus">
+        <h1>Campus Gallery</h1>
+        <p>Explore our beautiful campus through the gallery below.</p>
+        <div class="gallery-container">
+            <div class="gallery gallery-row-1">
+                <img src="gallary\1.jpg" alt="Campus Image 1">
+                <img src="gallary\2.jpg" alt="Campus Image 2">
+                <img src="gallary\3.jpg" alt="Campus Image 3">
+                <img src="gallary\4.jpg" alt="Campus Image 4">
+                <img src="gallary\5.jpg" alt="Campus Image 5">
+                <img src="gallary\6.jpg" alt="Campus Image 6">
+                <img src="gallary\7.jpg" alt="Campus Image 7">
+                <img src="gallary\8.jpg" alt="Campus Image 8">
+                <!-- Duplicate images for seamless scrolling -->
+                <img src="gallary\1.jpg" alt="Campus Image 1">
+                <img src="gallary\2.jpg" alt="Campus Image 2">
+                <img src="gallary\3.jpg" alt="Campus Image 3">
+                <img src="gallary\4.jpg" alt="Campus Image 4">
+            </div>
+            <div class="gallery gallery-row-2">
+                <img src="gallary\8.jpg" alt="Campus Image 8">
+                <img src="gallary\7.jpg" alt="Campus Image 7">
+                <img src="gallary\6.jpg" alt="Campus Image 6">
+                <img src="gallary\5.jpg" alt="Campus Image 5">
+                <img src="gallary\4.jpg" alt="Campus Image 4">
+                <img src="gallary\3.jpg" alt="Campus Image 3">
+                <img src="gallary\2.jpg" alt="Campus Image 2">
+                <img src="gallary\1.jpg" alt="Campus Image 1">
+                <!-- Duplicate images for seamless scrolling -->
+                <img src="gallary\8.jpg" alt="Campus Image 8">
+                <img src="gallary\7.jpg" alt="Campus Image 7">
+                <img src="gallary\6.jpg" alt="Campus Image 6">
+                <img src="gallary\5.jpg" alt="Campus Image 5">
+            </div>
+        </div>
+    </section>
+
     <section id="courses">
         <h1>Our Courses</h1>
-        <p>Explore the wide range of courses we offer.</p>
-        <h2>Undergraduate Engineering Program</h2>
-        <table>
-            <tr>
-                <th>Course</th>
-                <th>Seats</th>
             </tr>
             <tr>
                 <td>Computer Engineering</td>
@@ -119,8 +153,28 @@
         </a>
     </section>
 
+    <section id="credits">
+        <h1>Credits</h1>
+        <p>About Me</p>
+        <p>
+            Hi, I’m <b>Ayush</b> — just a passionate developer who loves building creative apps and websites.
+            This college website was a project I designed during my time as a student here. Being from the same college made it extra special to create something meaningful and relatable.
+            
+            The source code is available on my GitHub, feel free to explore or contribute!
+            
+            You can also connect with me on LinkedIn.
+            If you're someone with similar interests or want to collaborate, feel free to reach out via email.
+        </p>
+        <div class="credits-buttons">
+            <a href="https://www.linkedin.com/in/ayush-rajput-98704632b?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank" class="button">LinkedIn</a>
+            <a href="mailto:ayushrajput16102005@gmail.com" class="button">Email</a>
+            <a href="https://github.com/ayushrajput2005" target="_blank" class="button">GitHub</a>
+            <a href="https://ayushrajput2005.github.io/Ayushs-Portfolio/" target="_blank" class="button">Portfolio</a>
+        </div>
+    </section>
+
     <!-- Watermarks -->
-    <div class="watermark">Made with ❤️ From Ayush</div>
+    <div class="watermark">Made with ❤️ By Ayush</div>
     <div class="video-watermark">
         <a href="http://www.sinhgad.edu/" target="_blank">Background video ©</a>
     </div>
